# pbash

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmd_glue_gen.cmake
cmake/templates/: cmd_glue_gen.c.in  cmd_glue_gen.h.in
src/: cli.c  cli.h  cmd_common.c  cmd_common.h  history.c  history.h  main.c
src/commands/: cd.c  cd.h  cp.c  cp.h  grep.c  grep.h  ls.c  ls.h  ping.c  ping.h  pwd.c  pwd.h
